[package]
name = "btfs"
version = "0.0.4"
authors = ["Ben Parli <bparli@gmail.com>", "Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A simple in-memory FS."
keywords = ["mem", "fs", "btree", "file-system"]
categories = ["filesystem", "concurrency", "data-structures", "os"]

homepage = "https://github.com/gz/btfs"
repository = "https://github.com/gz/btfs"
documentation = "https://docs.rs/btfs"

[dependencies]
log = "0.4"
fuse = "0.3.1"
libc = "0.2.42"
time = "0.1.40"
env_logger = "0.8"
